crates/tools-macros/tests/fixtures/fail_non_async.rs
use tools_macros::tool;

#[tool]
fn file_read(path: String) -> String {
    path
}

fn main() {}
